--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,6 @@ services:
   - type: web
     name: medscheduler-backend
     env: python
-    plan: free
     autoDeploy: true
     buildCommand: pip install -r backend/requirements.txt
     startCommand: uvicorn backend.main:app --host 0.0.0.0 --port $PORT
@@ -23,10 +22,8 @@ services:
       - key: SECRET_KEY
         generateValue: true
 
-  - type: web
+  - type: static
     name: medscheduler-frontend
-    env: static
-    plan: free
     autoDeploy: true
     buildCommand: npm install && npm run build
     staticPublishPath: dist
