--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -21,6 +21,7 @@ google-generativeai==0.3.1
 # Data validation
 pydantic==2.5.0
 pydantic-settings==2.1.0
+email-validator==2.1.0.post1
 
 # HTTP client (optional)
 httpx==0.25.1
